--- a/개발지식/버그,오류(에러),예외,경고/index.html
+++ b/개발지식/버그,오류(에러),예외,경고/index.html
@@ -73,8 +73,9 @@
 <blockquote>
 <p>위키피디아 - 예외처리</p>
 </blockquote>
-<div class="gatsby-highlight" data-language="markdown"><pre class="language-markdown"><code class="language-markdown">예외 처리 또는 오류 처리는 일발적인 실행의 흐름을 바구는 몇 가지 조건을 처리하도록 설계한 프로그래밍 언어의 개념이나 컴퓨터 하드웨어 구조를 말한다.
-빌반적으로 프로그램이 처리되는 동안 특정한 문제가 일어났을 때 
+<div class="gatsby-highlight" data-language="markdown"><pre class="language-markdown"><code class="language-markdown">예외 처리 또는 오류 처리는 일발적인 실행의 흐름을 바구는 몇 가지 조건을 처리하도록 설계한
+프로그래밍 언어의 개념이나 컴퓨터 하드웨어 구조를 말한다.
+일반적으로 프로그램이 처리되는 동안 특정한 문제가 일어났을 때 
 처리를 중단하고 다른처리를 하는 것을 예외 처리라고 한다.</code></pre></div>
 <p>예외는 실행 도중 중단될 정도로 큰 문제가 아닐 때 발생하는 것</p>
 <p>자바에서 (Un)Checked Exception</p>
